polishing readme and case study

--- a/CaseStudy.html
+++ b/CaseStudy.html
@@ -1711,7 +1711,7 @@ display: none;
 <h1 class="title toc-ignore">Case study: variable selection for the
 approximation of body fat</h1>
 <h4 class="author">Lacey W. Heinsberg</h4>
-<h4 class="date">November 06, 2024, 16:06</h4>
+<h4 class="date">November 06, 2024, 16:26</h4>
 
 </div>
 
@@ -1769,7 +1769,7 @@ and Daniela Dunkler. This code has been modified and annotated for the
 following work:</p>
 <p>Heinsberg LW. Statistical Tools to Support Implementation: Variable
 Selection and Post-Selection Inference in Genomic Nursing Research.
-[Expert Lecturer Abstract, Podium]. Presented at the International
+(Expert Lecturer Abstract, Podium). Presented at the International
 Society of Nurses in Genetics, November 2024, San Diego, California.</p>
 <p>For questions, comments, or remarks, feel free to contact Lacey
 Heinsberg (<a href="mailto:law145@pitt.edu" class="email">law145@pitt.edu</a>).</p>
